2012-05-20 Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm (WIN_options, WIN_set_color) src/win/wgraph.c
	(drawgraph): Change the behaviour of the "mono" terminal option of
	the windows terminal. Colors are converted from RGB to grayscale in
	drawgraph(). That way, a grayscale copy of colour plots can obtained
	more easily.

	* src/win/wgnuplib.h src/win/wgraph.c: Retain the temporary bitmap used
	for drawing to speed up redraws. Reduces the number of calls to drawgraph()
	to a minimum.

2012-05-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (do_arc) src/graphics.c (do_ellipse):  Revisit clipping the
	filled interior of circles and ellipses.  Now it handles objects whose
	center is outside the plot but specified in plot coordinates.
	Bug #3522515

2012-05-17  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/faq-ja.tex docs/gnuplot-ja.doc docs/term-ja.diff
	man/gnuplot-ja.1:  Sync with English documentation.

2012-05-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (do_arc) src/graphics.c (do_ellipse):  Clip the filled
	interior of circles and ellipses.
	Bug #3522515

2012-05-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp (wxt_cairo_refresh):  Execution of the
	command list must be protected by command_list_mutex or it will blow up
	if the command list is cleared/replaced during execution.
	Bug #3371205

	* src/graphics.c:  Allow log-scaled y axis for plots with fillsteps.
	Bug #3324785

2012-05-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (lf_push lf_pop) src/misc.h:  The lf_push/lf_pop mechanism
	for restoring context after a "call" statement was saving the individual
	call args $0 $1 etc, but failing to save the number of active args.
	Bug #3525155

2012-05-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (plot_option_array): Skip call to clear_binary_records.
	This reduces the order-dependence of binary plot options, but may intro-