@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: set.c,v 1.369 2012/05/05 04:21:41 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: set.c,v 1.370 2012/05/20 14:18:54 markisch Exp $"); }
 #endif
 
 /* GNUPLOT - set.c */
@@ -171,7 +171,7 @@ static void check_palette_grayscale __PROTO((void));
 static int set_palette_defined __PROTO((void));
 static void set_palette_file __PROTO((void));
 static void set_palette_function __PROTO((void));
-static void parse_histogramstyle __PROTO((histogram_style *hs, 
+static void parse_histogramstyle __PROTO((histogram_style *hs,
 		t_histogram_type def_type, int def_gap));
 
 static struct position default_position
@@ -184,7 +184,7 @@ set_command()
     c_token++;
 
     /* Mild form of backwards compatibility */
-	/* Allow "set no{foo}" rather than "unset foo" */ 
+	/* Allow "set no{foo}" rather than "unset foo" */
     if (gp_input_line[token[c_token].start_index] == 'n' &&
 	       gp_input_line[token[c_token].start_index+1] == 'o') {
 	if (interactive)
@@ -659,7 +659,7 @@ set_arrow()
     TBOOLEAN set_end = FALSE;
     int save_token;
     int tag;
-    
+
     c_token++;
 
     /* get tag */
@@ -852,7 +852,7 @@ set_autoscale()
 	    axis_array[FIRST_Y_AXIS].set_autoscale =  AUTOSCALE_BOTH;
 	axis_array[FIRST_X_AXIS].min_constraint =
 	    axis_array[FIRST_X_AXIS].max_constraint =
-	    axis_array[FIRST_Y_AXIS].min_constraint = 
+	    axis_array[FIRST_Y_AXIS].min_constraint =
 	    axis_array[FIRST_Y_AXIS].max_constraint = CONSTRAINT_NONE;
 	c_token++;
 	return;
@@ -919,7 +919,7 @@ set_bars()
 
     if (save_token == c_token)
 	bar_size = 1.0;
-	
+
 }
 
 
@@ -933,7 +933,7 @@ set_border()
 	border_layer = 1;
 	border_lp = default_border_lp;
     }
-    
+
     while (!END_OF_COMMAND) {
 	if (equals(c_token,"front")) {
 	    border_layer = 1;
@@ -1034,7 +1034,7 @@ set_boxplot()
 	else
 	    int_error(c_token,"unrecognized option");
     }
-    
+
 }
 
 
@@ -1223,7 +1223,7 @@ static void
 set_dgrid3d()
 {
     int token_cnt = 0; /* Number of comma-separated values read in */
-  
+
     int gridx     = dgrid3d_row_fineness;
     int gridy     = dgrid3d_col_fineness;
     int normval   = dgrid3d_norm_value;
@@ -1237,7 +1237,7 @@ set_dgrid3d()
     dgrid3d_kdensity = FALSE;
 
     c_token++;
-    while ( !(END_OF_COMMAND) ) { 
+    while ( !(END_OF_COMMAND) ) {
         int tmp_mode = lookup_table(&dgrid3d_mode_tbl[0],c_token);
 	if (tmp_mode != DGRID3D_OTHER) {
 	    dgrid3d_mode = tmp_mode;
@@ -1285,12 +1285,12 @@ set_dgrid3d()
 				int_error(c_token,"Unrecognize keyword or unexpected value");
 			break;
 	}
-		
+
     }
 
-    /* we could warn here about floating point values being truncated... */  
+    /* we could warn here about floating point values being truncated... */
     if( gridx < 2 || gridx > 1000 || gridy < 2 || gridy > 1000 )
-        int_error( NO_CARET, 
+        int_error( NO_CARET,
                    "Number of grid points must be in [2:1000] - not changed!");
 
     /* no mode token found: classic format */
@@ -1298,7 +1298,7 @@ set_dgrid3d()
         dgrid3d_mode = DGRID3D_QNORM;
 
     if( scalex < 0.0 || scaley < 0.0 )
-        int_error( NO_CARET, 
+        int_error( NO_CARET,
                    "Scale factors must be greater than zero - not changed!" );
 
     dgrid3d_row_fineness = gridx;
@@ -1488,6 +1488,12 @@ set_fit()
 	} else if (almost_equals(c_token, "noerr$orvariables")) {
 	    fit_errorvariables = FALSE;
 	    c_token++;
+	} else if (almost_equals(c_token, "errors$caling")) {
+	    fit_errorscaling = TRUE;
+	    c_token++;
+	} else if (almost_equals(c_token, "noerrors$caling")) {
+	    fit_errorscaling = FALSE;
+	    c_token++;
 	} else if (equals(c_token,"quiet")) {
 	    fit_quiet = TRUE;
 	    c_token++;
@@ -1496,7 +1502,7 @@ set_fit()
 	    c_token++;
 	} else {
 	    int_error(c_token,
-		      "unknown --- expected 'logfile' or [no]errorvariables");
+	            "unknown --- expected 'logfile', [no]errorvariables, [no]errorscaling, or [no]quiet");
 	}
     } /* while (!end) */
 }
@@ -2069,7 +2075,7 @@ set_label()
     int tag;
 
     c_token++;
-    
+
     /* get tag */
     if (!END_OF_COMMAND
 	/* FIXME - Are these tests really still needed? */
@@ -2116,7 +2122,7 @@ set_label()
     }
     /* Insert this label into the list if it is a new one */
     if (this_label == NULL || tag != this_label->tag) {
-	struct position default_offset = { character, character, character, 
+	struct position default_offset = { character, character, character,
 					   0., 0., 0. };
 	new_label = new_text_label(tag);
 	new_label->offset = default_offset;
@@ -2395,7 +2401,7 @@ set_datafile_commentschars()
     char *s;
 
     c_token++;
-	
+
     if (END_OF_COMMAND) {
 	free(df_commentschars);
 	df_commentschars = gp_strdup(DEFAULT_COMMENTS_CHARS);
@@ -2664,7 +2670,7 @@ set_output()
 
     /* Invalidate previous palette */
     invalidate_palette();
-	
+
 }
 
 
@@ -3521,7 +3527,7 @@ set_polar()
 }
 
 #ifdef EAM_OBJECTS
-/* 
+/*
  * Process command     'set object <tag> {rectangle|ellipse|circle|polygon}'
  * set object {tag} rectangle {from <bottom_left> {to|rto} <top_right>}
  *                     {{at|center} <xcen>,<ycen> size <w>,<h>}
@@ -3538,7 +3544,7 @@ set_object()
 
     /* The next token must either be a tag or the object type */
     c_token++;
-    if (almost_equals(c_token, "rect$angle") || almost_equals(c_token, "ell$ipse") 
+    if (almost_equals(c_token, "rect$angle") || almost_equals(c_token, "ell$ipse")
     ||  almost_equals(c_token, "circ$le") || almost_equals(c_token, "poly$gon"))
 	tag = -1; /* We'll figure out what it really is later */
     else {
@@ -3627,7 +3633,7 @@ set_obj(int tag, int obj_type)
     double lw = 1.0;
 
     c_token++;
-    
+
     /* We are setting the default, not any particular rectangle */
     if (tag < -1) {
 	c_token--;
@@ -3697,7 +3703,7 @@ set_obj(int tag, int obj_type)
 		    got_corners = TRUE;
 		    this_rect->type = 0;
 		    continue;
-	
+
 		} else if (equals(c_token,"at") || almost_equals(c_token,"cen$ter")) {
 		    /* Read in the center position */
 		    c_token++;
@@ -3705,7 +3711,7 @@ set_obj(int tag, int obj_type)
 		    got_center = TRUE;
 		    this_rect->type = 1;
 		    continue;
-	
+
 		} else if (equals(c_token,"size")) {
 		    /* Read in the width and height */
 		    c_token++;
@@ -3722,13 +3728,13 @@ set_obj(int tag, int obj_type)
 		    c_token++;
 		    get_position(&this_circle->center);
 		    continue;
-	
+
 		} else if (equals(c_token,"size") || equals(c_token,"radius")) {
 		    /* Read in the radius */
 		    c_token++;
 		    get_position(&this_circle->extent);
 		    continue;
-	
+
 		} else if (equals(c_token, "arc")) {
 		    /* Start and end angle for arc */
 		    if (equals(++c_token,"[")) {
@@ -3767,13 +3773,13 @@ set_obj(int tag, int obj_type)
 		    c_token++;
 		    get_position(&this_ellipse->center);
 		    continue;
-	
+
 		} else if (equals(c_token,"size")) {
 		    /* Read in the width and height */
 		    c_token++;
 		    get_position(&this_ellipse->extent);
 		    continue;
-	
+
 		} else if (almost_equals(c_token,"ang$le")) {
 		    c_token++;
 		    this_ellipse->orientation = real_expression();
@@ -3790,9 +3796,9 @@ set_obj(int tag, int obj_type)
 	            } else {
 	                int_error(c_token, "expecting 'xy', 'xx' or 'yy'" );
 	            }
-	            c_token++; 
+	            c_token++;
 		    continue;
-		
+
 		}
 		break;
 
@@ -4071,7 +4077,7 @@ set_style()
         c_token++;
 	while (!END_OF_COMMAND) {
 	    if (equals(c_token,"size")) {
-	        c_token++;    
+	        c_token++;
 	        get_position(&default_ellipse.o.ellipse.extent);
 	        c_token--;
 	    } else if (almost_equals(c_token,"ang$le")) {
@@ -4091,9 +4097,9 @@ set_style()
 	        } else {
 	            int_error(c_token, "expecting 'xy', 'xx' or 'yy'" );
 	        }
-	    } else 
+	    } else
 	        int_error(c_token, "expecting 'units {xy|xx|yy}', 'angle <number>' or 'size <position>'" );
-	    
+
 	    c_token++;
 	}
 	break;
@@ -4207,13 +4213,13 @@ set_terminal()
 }
 
 
-/* 
+/*
  * Accept a single terminal option to apply to the current terminal if possible.
  * If the current terminal cannot support this option, we silently ignore it.
  * Only reasonably common terminal options are supported.
  *
  * If necessary, the code in term->options() can detect that it was called
- * from here because in this case (c_token == 2), whereas when called from 
+ * from here because in this case (c_token == 2), whereas when called from
  * 'set term foo ...' it will see (c_token == 3).
  */
 
@@ -4226,7 +4232,7 @@ set_termoptions()
 
     if (END_OF_COMMAND || !term)
 	return;
-    
+
     if (almost_equals(c_token,"enh$anced")
            ||  almost_equals(c_token,"noenh$anced")) {
 	num_tokens = GPMIN(num_tokens,c_token+1);
@@ -5427,7 +5433,7 @@ new_text_label(int tag)
 
 /*
  * Parse the sub-options for label style and placement.
- * This is called from set_label, and from plot2d and plot3d 
+ * This is called from set_label, and from plot2d and plot3d
  * to handle options for 'plot with labels'
  */
 void
@@ -5612,7 +5618,7 @@ parse_label_options( struct text_label *this_label )
 /*                     errorbars {gap <n>} {linewidth <lw>}}            */
 /*                    {title <title_options>}                           */
 static void
-parse_histogramstyle( histogram_style *hs, 
+parse_histogramstyle( histogram_style *hs,
 		t_histogram_type def_type,
 		int def_gap)
 {
