@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: show.c,v 1.268 2012/04/18 00:13:46 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: show.c,v 1.269 2012/05/20 14:18:54 markisch Exp $"); }
 #endif
 
 /* GNUPLOT - show.c */
@@ -2496,6 +2496,10 @@ show_fit()
     fprintf(stderr, "\
 \tfit will%s place parameter errors in variables\n",
 	    fit_errorvariables ? "" : " not");
+
+    fprintf(stderr, "\
+\tfit will%s scale parameter errors with the reduced chi square\n",
+	    fit_errorscaling ? "" : " not");
 
     if (fitlogfile != NULL) {
         fprintf(stderr, "\
