@@ -1,4 +1,11 @@
-2012-05-20 Bastian Maerkisch  <bmaerkisch@web.de>
+2012-05-20  Alexander Täschner  <taschna@users.sourceforge.net>
+
+	* src/fit.c|h (regress) src/save.c (save_set_all) src/set.c (set_fit)
+	src/show.c (show_fit) src/unset.c (unset_fit) docs/gnuplot.doc: 
+	New option "set fit [no]errorscaling" which allows to toggle scaling of parameter errors. The default remains to scale errors.
+	Patch #3375473, Feature Request #2956524.
+
+2012-05-20  Bastian Maerkisch  <bmaerkisch@web.de>
 
 	* term/win.trm (WIN_options, WIN_set_color) src/win/wgraph.c
 	(drawgraph): Change the behaviour of the "mono" terminal option of
